# csad2425ki403porubaimikhoy17

./: README.md
.github/workflows/: build.yml  ci.yml
client/: MainForm.Designer.cs  MainForm.cs  Program.cs
input-modifier/client/: client.sln
input-modifier/server/: server.ino
reports/: Porubaimikh_L1.docx  Porubaimikh_L2.docx
server/: input_modifier.ino  server.ino
tests/: ArduinoTest.cs  CMakeLists.txt  Program.cs  Test.cs  main.cpp  mock.cpp  mock.hpp  test.cpp  test.hpp  tests.sln
